fittings/crates/macros/tests/ui/fail/on_struct.rs
#[fittings::service]
struct NotATrait;

fn main() {}
